# Django_lesson_20.2

./: data.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contact.py
catalog/templates/catalog/: base.html  contacts.html  index.html
catalog/templates/catalog/includes/: inc_product.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
