[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Dmitry Frost <dmitfrost@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
pillow = "^9.5.0"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
